--- a/projeto_montando_o_lanche/index.html
+++ b/projeto_montando_o_lanche/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,135 +11,246 @@
 
     <!--BOOTSTRAP-->
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
+  <body>
     <nav class="navbar navbar-light bg-light">
-        <div class="container">
-            <span class="navbar-brand nb-0 h1">Monte o seu Lanche</span>
-        </div>
+      <div class="container">
+        <span class="navbar-brand nb-0 h1">Monte o seu Lanche</span>
+      </div>
     </nav>
 
     <div class="container">
-        <div id="app">
-            <div class="row">
-                <div class="col-md-6">Imagens do Lanche</div>
-                <div class="col-md-6">
-                    <!-- TIPO DE PÂO -->
-
-                    <div class="row mt-2">
-                        <div class="col">
-                            <div class="card text-center">
-                                <div class="card-header">TIPO DO PÃO</div>
-                                <div class="card-body">
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio">
-                                        <label class="form-check-label">
-                                            Gergelin
-                                        </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio">
-                                        <label class="form-check-label">
-                                            Australiano
-                                        </label>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- SALADAS -->
-
-                    <div class="row mt-2">
-                        <div class="col">
-                            <div class="card text-center">
-                                <div class="card-header">SALADAS</div>
-                                <div class="card-body">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox">
-                                        <label class="form-check-label">
-                                            Alface
-                                        </label>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- MOLHOS -->
-
-                    <div class="row mt-2">
-                        <div class="col">
-                            <div class="card text-center">
-                                <div class="card-header">MOLHOS</div>
-                                <div class="card-body">
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox">
-                                        <label class="form-check-label">
-                                            Ketchup
-                                        </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox">
-                                        <label class="form-check-label">
-                                            Mostarda
-                                        </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox">
-                                        <label class="form-check-label">
-                                            Maionese
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- TIPO DE HAMBURGUER -->
-
-                    <div class="row mt-2">
-                        <div class="col">
-                            <div class="card text-center">
-                                <div class="card-header">TIPO DE HAMBURGUER</div>
-                                <div class="card-body">
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio">
-                                        <label class="form-check-label">
-                                            Bovino
-                                        </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio">
-                                        <label class="form-check-label">
-                                            Frango
-                                        </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio">
-                                        <label class="form-check-label">
-                                            Soja
-                                        </label>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+      <div id="app">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="row mt-2">
+              <div class="col">
+                <img :src="pao[0]" />
+                <img :src="alface" />
+                <img :src="ketchup" />
+                <img :src="maionese" alt="" />
+                <img :src="mostarda" alt="" />
+                <img :src="hamburguer" />
+                <img :src="pao[1]" />
+              </div>
             </div>
+          </div>
+          <div class="col-md-6">
+            <!-- TIPO DE PÂO -->
+
+            <div class="row mt-2">
+              <div class="col">
+                <div class="card text-center">
+                  <div class="card-header">TIPO DO PÃO</div>
+                  <div class="card-body">
+                    <div class="form-check form-check-inline">
+                      <input
+                        v-model="inputTipoPao"
+                        class="form-check-input"
+                        type="radio"
+                        value="gergilim"
+                      />
+                      <label class="form-check-label"> Gergelin </label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        v-model="inputTipoPao"
+                        class="form-check-input"
+                        type="radio"
+                        value="australiano"
+                      />
+                      <label class="form-check-label"> Australiano </label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- SALADAS -->
+
+            <div class="row mt-2">
+              <div class="col">
+                <div class="card text-center">
+                  <div class="card-header">SALADAS</div>
+                  <div class="card-body">
+                    <div class="form-check">
+                      <input
+                        v-model="inputSaladas"
+                        class="form-check-input"
+                        type="checkbox"
+                        value="alface"
+                      />
+                      <label class="form-check-label"> Alface </label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- MOLHOS -->
+
+            <div class="row mt-2">
+              <div class="col">
+                <div class="card text-center">
+                  <div class="card-header">MOLHOS</div>
+                  <div class="card-body">
+                    <div class="form-check form-check-inline">
+                      <input
+                        v-model="inputMolhos"
+                        class="form-check-input"
+                        type="checkbox"
+                        value="ketchup"
+                      />
+                      <label class="form-check-label"> Ketchup </label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        v-model="inputMolhos"
+                        class="form-check-input"
+                        type="checkbox"
+                        value="mostarda"
+                      />
+                      <label class="form-check-label"> Mostarda </label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        v-model="inputMolhos"
+                        class="form-check-input"
+                        type="checkbox"
+                        value="maionese"
+                      />
+                      <label class="form-check-label"> Maionese </label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- TIPO DE HAMBURGUER -->
+
+            <div class="row mt-2">
+              <div class="col">
+                <div class="card text-center">
+                  <div class="card-header">TIPO DE HAMBURGUER</div>
+                  <div class="card-body">
+                    <div class="form-check form-check-inline">
+                      <input
+                        v-model="inputHmaburguer"
+                        class="form-check-input"
+                        type="radio"
+                        value="bovino"
+                      />
+                      <label class="form-check-label"> Bovino </label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        v-model="inputHmaburguer"
+                        class="form-check-input"
+                        type="radio"
+                        value="frango"
+                      />
+                      <label class="form-check-label"> Frango </label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        v-model="inputHmaburguer"
+                        class="form-check-input"
+                        type="radio"
+                        value="soja"
+                      />
+                      <label class="form-check-label"> Soja </label>
+                      <div>
+                        <p></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
     <script>
-        const vm = new Vue({
-            el: "#app",
-        });
-    </script>
-</body>
+      const vm = new Vue({
+        el: "#app",
+        data() {
+          return {
+            inputTipoPao: "",
+            inputSaladas: [],
+            inputMolhos: [],
+            inputHmaburguer: "",
+          };
+        },
+        computed: {
+          pao() {
+            switch (this.inputTipoPao) {
+              case "gergilim":
+                return [
+                  "./imagens/pao_gergelim_superior.png",
+                  "./imagens/pao_gergelim_inferior.png",
+                ];
+              case "australiano":
+                return [
+                  "./imagens/pao_australiano_superior.png",
+                  "./imagens/pao_australiano_inferior.png",
+                ];
+              default:
+                return [
+                  "./imagens/padrao/pao_superior.png",
+                  "./imagens/padrao/pao_inferior.png",
+                ];
+            }
+          },
+          alface() {
+            if (this.inputSaladas.includes("alface")) {
+              return "./imagens/alface.png";
+            }
 
+            return "./imagens/padrao/alface.png";
+          },
+          ketchup() {
+            if (this.inputMolhos.includes("ketchup")) {
+              return "imagens/ketchup.png";
+            }
+
+            return "imagens/padrao/molho.png";
+          },
+          maionese() {
+            if (this.inputMolhos.includes("maionese")) {
+              return "imagens/maionese.png";
+            }
+
+            return "imagens/padrao/molho.png";
+          },
+          mostarda() {
+            if (this.inputMolhos.includes("mostarda")) {
+              return "imagens/mostarda.png";
+            }
+
+            return "imagens/padrao/molho.png";
+          },
+          hamburguer() {
+            switch (this.inputHmaburguer) {
+              case "bovino":
+                return "imagens/bovino.png";
+              case "frango":
+                return "imagens/frango.png";
+              case "soja":
+                return "imagens/soja.png";
+              default:
+                return "imagens/padrao/hamburguer.png";
+            }
+          },
+        },
+      });
+    </script>
+  </body>
 </html>
